# Human-recognization-using-deep-learning

./: .gitignore  CMakeLists.txt  DeepLearning.cpp  DeepLearning.hpp  README.md  detection_and_tracking.cpp
